@@ -35,12 +35,12 @@
 # include "win32/php_stdint.h"
 #endif
 
-#if defined(__GNUC__) && __GNUC__ < 3
+#ifndef HAVE_LLABS
+# if defined(__GNUC__) && __GNUC__ < 3
 static __inline __int64_t llabs( __int64_t i ) { return i >= 0 ? i : -i; }
-#endif
-
-#if defined(NETWARE) && defined(__MWERKS__)
+# elif defined(NETWARE) && defined(__MWERKS__)
 static __inline long long llabs( long long i ) { return i >= 0 ? i : -i; }
+# endif
 #endif
 
 /* {{{ arginfo */
